add: db structure

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "pg": "^8.8.0",
     "sequelize": "^6.23.0"
   },
-  "devDependencies": {},
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
+  }
 }
