--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "run": "node server/server.js",
-    "run:dev": "nodemon server/server.js",
+    "dev": "nodemon server/server.js",
     "build": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,15 +19,19 @@
   },
   "homepage": "https://github.com/hhasona/zigit-task#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "pg": "^8.8.0",
     "sequelize": "^6.23.0"
   },
   "description": "",
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "sequelize-cli": "^6.4.1"
   }
 }
